--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles.css";
 interface Props {
   title: string;
 }
@@ -17,12 +18,15 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <script src="/src/components/Increment.ts"></script>
     <slot />
   </body>
 </html>
 <style is:global>
   html {
     font-family: system-ui, sans-serif;
+    background: #0b0c12;
+    color: white;
   }
 
   html,
@@ -33,12 +37,8 @@ const { title } = Astro.props;
   }
 
   body {
-    display: grid;
-    grid-template-areas:
-      "header header"
-      "main  aside"
-      "main  aside";
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr auto;
+    display: flex;
+    width: 100%;
+    padding: 1rem;
   }
 </style>
