--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,36 +8,53 @@ import astroImg from "../../public/assets/astro.svg";
 ---
 
 <Layout title="Welcome to Astro.">
-  <header class="bg-gray-200 flex justify-between gap-8 items-center">
-    <Image class="max-w-32" src={astroImg} alt="Astro logo" />
+  <main class="flex flex-col justify-between items-center gap-8 flex-1">
+    <astro-increment class="flex justify-between w-full items-center">
+      <Image class="max-w-32" src={astroImg} alt="Astro logo" />
 
-    <div>
-      <button id="increment-btn"> Increment </button>
+      <p class="text-2xl">
+        <strong>Count:</strong>
+        <span id="counter-value" class="transition-transform inline-block"
+        ></span>
+        <span class="hidden scale-[5]"></span>
+      </p>
+
+      <div>
+        <button id="increment-btn"> Increment </button>
+      </div>
+    </astro-increment>
+    <div class="grid grid-cols-2 w-full gap-4 flex-1">
+      <section>
+        <Angular data-analog-id="angular-component" client:load />
+      </section>
+      <section>
+        <React client:load />
+      </section>
     </div>
-  </header>
-  <main>
-    <Angular client:load />
   </main>
-  <aside>
-    <React client:load />
-  </aside>
 </Layout>
 
 <script>
-  import { count } from "../state/state";
+  import { addOutputListener } from "@analogjs/astro-angular/utils";
+  import { incrementCount } from "../state/state";
 
-  document.getElementById("increment-btn")?.addEventListener("click", () => {
-    count.set(count.get() + 1);
-    console.log("Increment button clicked");
-  });
+  const incrementButton = document.getElementById("increment-btn");
+
+  incrementButton?.addEventListener("click", () => incrementCount());
+
+  addOutputListener("angular-component", "increment", (value) =>
+    incrementCount()
+  );
 </script>
 
 <style>
   main,
   aside,
-  header {
+  header,
+  section {
     padding: 1rem;
     border: dashed 2px #c868b0;
+    border-radius: 8px;
   }
   main {
     grid-area: main;
@@ -49,17 +66,5 @@ import astroImg from "../../public/assets/astro.svg";
 
   header {
     grid-area: header;
-  }
-
-  button {
-    @apply text-white py-2 px-4 rounded bg-blue-700;
-
-    &:hover {
-      @apply bg-blue-800;
-    }
-
-    &:active {
-      @apply bg-blue-900;
-    }
   }
 </style>
